able to render users and followers. still working on followers total to display below username.

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,6 +2,9 @@ nav {
     background-color: purple;
     color: white;
     display: flex;
+    gap: 1rem;
+    padding: 1rem;
+    margin-bottom: 1rem;
 }
 
 button {
