--- a/src/app/shared/card/card.component.css
+++ b/src/app/shared/card/card.component.css
@@ -6,5 +6,14 @@ img {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center
+    align-items: center;
+    word-wrap: break-word;
+    word-break: break-word;
+    max-width: 8rem;
+    min-width: 8rem;
+    max-height: 11rem;
+    min-height: 11rem;
+}
+.card p {
+    text-align: center
 }
