--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+body,
+button {
+    font-family: sans-serif;
+    font-size: min(4rem, max(.875rem, 2vw))
+}
+
+.list {
+    padding: 1rem;
+}
